feat: refine runtime semantics and execution proof chain
- Updated README to clarify the at-most-once execution guarantee and the new Execution Proof Chain for runtime 1.0.
- Enhanced design documentation to detail the mechanisms ensuring world safety and the conditions under which external side effects are executed.
- Modified ToolInvocationStatus to align with the new state machine semantics, improving clarity on invocation states.
- Updated tests to validate the new execution semantics under various failure scenarios, ensuring robust handling of tool invocations.

--- a/design/1.0-runtime-semantics.md
+++ b/design/1.0-runtime-semantics.md
@@ -11,6 +11,29 @@
 
 ---
 
+## Execution Proof Chain（执行证明链）
+
+Runtime 1.0 的标准是 **World Safety**：系统可证明自己不会二次改变世界。下述链条任一环节断掉，runtime 不成立。
+
+```
+Event Log
+   ↓
+ReplayContext (CompletedToolInvocations, StateChangesByStep)
+   ↓
+Runner 注入 context → step.Run(tool node)
+   ↓
+Adapter: InvocationLedger.Acquire
+   ↓
+ReturnRecordedResult → runConfirmation → 注入结果并 return（不调用 tool）
+AllowExecute         → runNodeExecute  → 执行 tool → Commit（唯一执行 tool 的路径）
+```
+
+**唯一执行 tool 的代码路径**：仅当 Ledger 返回 `AllowExecute` 时，Adapter 进入 `runNodeExecute`，内部才调用 `Tools.Execute`。  
+实现位置：[internal/agent/runtime/executor/node_adapter.go](internal/agent/runtime/executor/node_adapter.go) 第 161–196 行（`Acquire` 分支）；第 253 行起 `runNodeExecute`。  
+时序图见 [design/execution-proof-sequence.md](design/execution-proof-sequence.md)。
+
+---
+
 ## ① Tool Invocation Ledger（工具调用账本）
 
 **语义**：Runner **不拥有**执行权；执行权由 Ledger 裁决。每次 tool 步：Runner 调用 `InvocationLedger.Acquire(...)`；Ledger 返回 `AllowExecute`（无已提交记录）或 `ReturnRecordedResult`（已有 committed 成功记录）。仅当 `AllowExecute` 时 Runner 执行 tool 并调用 `Commit`；`ReturnRecordedResult` 时只做 Confirmation 后注入结果、**禁止调用 tool**。Replay = 查账本/事件恢复结果，不执行代码。
@@ -20,12 +43,23 @@
 - [internal/agent/runtime/executor/ledger.go](internal/agent/runtime/executor/ledger.go)：`InvocationLedger` 接口（`Acquire`、`Commit`、`Recover`）与 `InvocationDecision`（AllowExecute、ReturnRecordedResult、WaitOtherWorker、Rejected）。
 - [internal/agent/runtime/executor/ledger_store.go](internal/agent/runtime/executor/ledger_store.go)：基于 `ToolInvocationStore` 的 Ledger 实现；Acquire 内查 store 或使用 replay 注入的 `replayResult`。
 - [internal/agent/runtime/executor/invocation_store.go](internal/agent/runtime/executor/invocation_store.go)：`ToolInvocationRecord`、`ToolInvocationStore`（GetByJobAndIdempotencyKey、SetStarted、SetFinished）。
-- [internal/agent/runtime/executor/node_adapter.go](internal/agent/runtime/executor/node_adapter.go)：当 `InvocationLedger != nil` 时，先 `Acquire`；若 `ReturnRecordedResult` 则 Confirmation + 注入并 return；若 `AllowExecute` 则执行 tool 后 `Commit`。无 Ledger 时保留兼容路径（直接查 Store / CompletedToolInvocations）。
+- [internal/agent/runtime/executor/node_adapter.go](internal/agent/runtime/executor/node_adapter.go)：当 `InvocationLedger != nil` 时，先 `Acquire`；若 `ReturnRecordedResult` 则 Confirmation + 注入并 return；若 `AllowExecute` 则执行 tool 后 `Commit`。**1.0 要求**：持久化 job（`jobID != ""`）必须配置 Ledger，所有 tool 调用经 Ledger 裁决。无 Ledger 时的分支仅为**单进程/兼容路径**，不提供跨 worker 与 replay 的 World Safety 保证。
 - [internal/agent/replay/replay.go](internal/agent/replay/replay.go)：`tool_invocation_finished`（outcome success）→ `CompletedToolInvocations[idempotency_key] = result`，Replay 时将结果注入 context，Adapter 的 Acquire 收到 `replayResult` 即返回 `ReturnRecordedResult`。
 
 **结论**：当存在已提交成功记录（Ledger/Store 或事件构建的 CompletedToolInvocations）时，replay **不会**触发真实 tool 调用。
 
 **多 Worker**：多 Worker 需共享 `ToolInvocationStore`（如 PostgreSQL）。Ledger 实现包装该 Store；同一 idempotency_key 仅允许一次 Commit。可选实现见 [internal/agent/runtime/executor/invocation_pg.go](internal/agent/runtime/executor/invocation_pg.go)。
+
+**Ledger 状态机（与 Store 映射）**：语义状态与持久化字段对应关系如下，不改变现有 schema。
+
+| 语义状态 | 含义 | Store 对应 |
+|----------|------|------------|
+| NEW | 尚无记录，可发放执行许可 | 无记录（GetByJobAndIdempotencyKey 返回 nil） |
+| INFLIGHT | 已占位、未提交，其他 worker 应等待 | Status=started，Committed=false |
+| COMMITTED | 已提交成功，replay 仅恢复结果 | Status=success/confirmed，Committed=true，Result 非空 |
+| RECOVERABLE | 可从事件流恢复（不依赖 Store） | 事件流 tool_invocation_finished(success) → CompletedToolInvocations[idempotency_key] |
+
+Acquire 决策：NEW → AllowExecute；INFLIGHT → WaitOtherWorker；COMMITTED 或 replayResult → ReturnRecordedResult。
 
 ---
 
@@ -93,3 +127,5 @@ TraceUI 与事件流可将 `pure` 视为「无世界变更」、`side_effect_com
 | ③ Confirmation Replay | 加载事件 → 重建 → 查账本 → 有记录恢复、无记录执行；永不重放已提交副作用 | replay.go, runner.go, node_adapter.go, state_diff.go |
 
 完成上述三点后，Aetheris 具备**最小运行时语义**：replay 不再触发外部调用，且当外部世界与记录不一致时可拒绝信任已提交结果，即「可信执行的 agent」而非仅「可恢复的 agent」。
+
+**1.0 证明**：下述四类场景的测试通过，则任意 agent step 在崩溃、网络中断、重启、双 worker 抢同一 step、replay 恢复下均**不会**重复触发外部副作用。测试见 [internal/agent/runtime/executor/ledger_1_0_test.go](internal/agent/runtime/executor/ledger_1_0_test.go)：(1) worker 在 tool 执行前崩溃 → TestLedger_1；(2) tool 执行后、commit 前崩溃 → TestLedger_2；(3) 两 worker 同时抢同一 step → TestLedger_3；(4) replay 恢复输出 → TestLedger_5、TestAdapter_Replay_InjectsResult_NoToolCall。
