feat: enhance effect system and observability features
- Updated the effect system documentation to clarify the handling of recorded effects, including new types such as UUIDRecorded and HTTPRecorded for version 2.0.
- Improved replay safety by enforcing that non-deterministic operations are only accessed through the Recorded Effects API during replay.
- Added a new API endpoint for retrieving stuck job IDs, enhancing observability and allowing for easier monitoring of job statuses.
- Enhanced the observability documentation to include details on the new stuck job detection features and their usage.
- Updated relevant design documents to reflect these changes and their implications for agent execution and observability.

--- a/docs/2.0-roadmap.md
+++ b/docs/2.0-roadmap.md
@@ -15,8 +15,8 @@
 | Signal 持久化 / At-least-once | 完成 | SignalInbox（Append + MarkAcked），JobSignal 先写 inbox 再 Append。`internal/agent/signal`、[design/runtime-contract.md](../design/runtime-contract.md) |
 | Side-Effect Ledger | 已有基础 | Effect Store + command_committed + tool_invocation_*；Replay 只注入不执行。[design/effect-system.md](../design/effect-system.md) |
 | Observability | 已增强 | CountPending、ListStuckRunningJobIDs、GET /api/observability/summary。`internal/agent/job/observability.go`、[docs/observability.md](observability.md) |
-| SDK / Step Contract | 完成（待强化） | step/tool/runtime_context 包与文档；**待强化**：Runner 注入 RecordedEffects / RuntimeContext。`pkg/agent/sdk`、[design/step-contract.md](../design/step-contract.md) |
-| Tool 幂等 / RetryPolicy / Compensation | 已定义（待强化） | 类型与契约文档已有；**待强化**：Adapter 使用 RetryPolicy、Runner 接入 CompensationRegistry。[design/tool-contract.md](../design/tool-contract.md)、`internal/agent/runtime/executor/retry.go`、`compensation.go` |
+| SDK / Step Contract | 完成 | step/tool/runtime_context 包与文档；**Runner 已注入** RecordedEffects + sdk.RuntimeContext（step 内仅能通过 Runtime Now/UUID/HTTP）。`pkg/agent/sdk`、[design/step-contract.md](../design/step-contract.md) |
+| Tool 幂等 / RetryPolicy / Compensation | 完成 | Adapter 使用 RetryPolicy 重试、Runner 接入 CompensationRegistry 与 AppendStepCompensated；ToolInvocationID 暴露。[design/tool-contract.md](../design/tool-contract.md)、`internal/agent/runtime/executor/retry.go`、`compensation.go` |
 
 ---
 
@@ -67,6 +67,61 @@ flowchart LR
 - **已实现待强化**：Runner 注入 Step Contract（RecordedEffects/RuntimeContext）、Adapter 使用 RetryPolicy、Runner 接入 CompensationRegistry。
 - **下一步可选**：Stuck Job UI、重试时间线可视化、审计/因果追溯（Tool Trace）。
 - **2.0 发布标准**：由「已实现 + 待强化」共同满足，见下方判定清单。
+
+---
+
+## 2.1 2.0 模块状态流程图（最新）
+
+下图按「已完成 → 已有基础待强化 → 剩余 2.0 必须」区分，与当前提交（含 Runner 注入、RetryPolicy、Compensation）一致，便于一眼看清哪些已到位、哪些需更新。
+
+```mermaid
+flowchart TB
+  subgraph done [已完成]
+    A[Event_Sourcing_JobStore]
+    B[Step_Committed_Barrier]
+    C[Determinism_RecordedEffects_RunnerInject]
+    D[Scheduler_Lease_Heartbeat_Reclaim]
+    E[Signal_Inbox_Durable_Ack]
+    F[Observability_Backlog_Stuck_Summary]
+    G[RetryPolicy_Compensation]
+  end
+  subgraph base [已有基础待强化]
+    H[SideEffect_Ledger_Coverage]
+    I[Worker_Scheduler_Deep_Integration]
+    J[Stuck_Job_UI_Retry_Timeline]
+  end
+  subgraph remain [剩余2.0必须]
+    K[Replay_NonDet_Panic]
+    L[Worker_Crash_Recovery_ClosedLoop]
+    M[Signal_Redelivery]
+    N[Ledger_Full_Coverage]
+    O[Step_Contract_Strict_Enforce]
+    P[SRE_Observability]
+    Q[Tool_Idempotency_Compensation_Docs]
+  end
+  done --> base
+  base --> remain
+```
+
+- **已完成**：Event Sourcing、Step Committed Barrier、Deterministic Replay（ReplayGuard + Recorded Effects + Runner 注入）、Worker Lease/Heartbeat/Reclaim、Signal Inbox（持久化 + ack）、Observability（backlog + stuck + summary）、RetryPolicy + Compensation。
+- **已有基础待强化**：Side-Effect Ledger 完整覆盖、Worker 与 Scheduler 深度集成（如 run loop 使用 HeartbeatRunner）、Stuck Job UI / Retry Timeline。
+- **剩余 2.0 必须**：Replay 非确定性 runtime panic、Worker 分布式可靠性闭环、Signal 重投递、Ledger 全覆盖、Step Contract 强制（可选 panic）、SRE 可观测性完善、工具幂等与 Compensation 契约完善。详见下方「剩余核心逻辑清单」。
+
+---
+
+## 2.2 剩余核心逻辑清单（2.0 必须）
+
+与 2.0 必须项一一对应，每条给出当前状态与建议下一步，便于排期与勾选。以下各项已按实现计划完成对应代码或文档更新（#1 WithReplay+#2 Worker 文档+#7 tool-contract+#4 effect-system+#3 Signal 文档+#5 清单备注+#6 GET /observability/stuck+observability 文档）。
+
+| # | 模块 | 当前状态 | 建议下一步 |
+|---|------|----------|------------|
+| 1 | **Deterministic Replay Enforcement** | ReplayGuard + Recorded Effects + Runner 注入；Replay 时从事件注入。 | Replay 模式下对未记录非确定性（如直接 time.Now/rand）做 runtime 检测并 panic/fail，或文档明确「仅允许 Runtime API」并由测试覆盖。 |
+| 2 | **Worker 分布式可靠性** | Claim/Heartbeat/ListJobIDsWithExpiredClaim、ReclaimOrphanedFromEventStore 已用；scheduler 包有 LeaseManager/HeartbeatRunner。 | Worker 执行循环显式使用 LeaseManager/HeartbeatRunner（或等价），保证超时/crash 后任务迁移闭环；Step timeout / retry 与 compensation 已有，可补充文档。 |
+| 3 | **Signal / Human-in-the-loop** | 持久化 Signal Inbox、先写 inbox 再 Append、MarkAcked；at-least-once 流程已有。 | 如需「重投递」语义，增加 offset/重试消费与文档；at-least-once 已满足可标注。 |
+| 4 | **Side-Effect Ledger 完善** | 工具调用 ledger + command_committed + tool_invocation_*；Replay 不执行工具。 | 覆盖所有外部效果类型（含 HTTP/时间等已记录效应）；明确 Replay 只验证结果不执行。 |
+| 5 | **Step Contract Runtime Enforcement** | Runner 注入 RecordedEffects + sdk.RuntimeContext；Step 仅能通过 Runtime Now/UUID/HTTP。 | 文档与注入已满足；可选 strict 模式 panic 或单测验证 Replay 注入。 |
+| 6 | **可观测性 / SRE** | Stuck job 检测、Queue backlog、GET /api/observability/summary。 | Stuck Job UI、Retry Timeline 可视化、Worker Health 与队列积压展示。 |
+| 7 | **工具幂等性 / Compensation** | RetryPolicy 在 Adapter、CompensationRegistry 在 Runner、AppendStepCompensated、ToolInvocationID。 | 文档要求不可幂等工具注册 Compensation；所有 retry 绑定 InvocationID 已满足，在文档/契约中写清。 |
 
 ---
 
@@ -125,13 +180,13 @@ flowchart LR
 
 ## 6. 2.0 发布判定清单
 
-Aetheris 2.0 可视为完成时，应满足以下标准（可勾选自检）：
+Aetheris 2.0 可视为完成时，应满足以下标准（可勾选自检）。**已实现**：Runner 注入 RecordedEffects/RuntimeContext、RetryPolicy、Compensation；其余项与「2.2 剩余核心逻辑清单」对齐。
 
 - [ ] **Worker crash / job resume 无重复执行** — Lease 过期 + Reclaim + Step Committed Barrier + Ledger 保证
 - [ ] **Replay 永远一致（deterministic）** — Recorded Effects 唯一入口、Replay 时仅注入、无未记录非确定性
 - [ ] **Tool 调用至少一次执行、结果可验证** — idempotency_key、ToolInvocationID、Effect Store / Ledger
 - [ ] **Signal 持久化可靠** — 先写 inbox 再 Append，at-least-once delivery
-- [ ] **Step Contract runtime enforcement 完整** — Runner 注入 RecordedEffects/RuntimeContext，Step 仅能通过 Runtime API 做副作用
+- [x] **Step Contract runtime enforcement 完整** — Runner 注入 RecordedEffects/RuntimeContext，Step 仅能通过 Runtime API 做副作用（已实现）
 - [ ] **Job trace 可被 SRE / 业务运维使用** — Trace UI、observability summary、stuck job、queue backlog
 
 ---
