chore(open-source): align public surface with implemented capabilities
- return 501 for unimplemented forensics query/audit endpoints

- make verify <evidence.zip> explicitly not implemented

- unify Makefile CLI binary name to aetheris

- add SECURITY/MAINTAINERS/SUPPORT docs

- add GitHub issue and PR templates

- update docs to mark planned vs implemented features

--- a/docs/2.0-RELEASE-NOTES.md
+++ b/docs/2.0-RELEASE-NOTES.md
@@ -225,17 +225,17 @@ aetheris version
 
 ---
 
-## 📞 支持
+## 支持
 
-- GitHub Issues: https://github.com/yourusername/aetheris/issues
-- 文档: https://aetheris.dev/docs
-- 社区: https://discord.gg/aetheris
+- GitHub Issues: 请在当前仓库的 Issues 页面提交问题
+- 文档: `docs/` 目录
+- 社区: 当前以 GitHub Issues/PR 作为主要协作渠道
 
 ---
 
 **Release Date**: 2026-02-12  
 **Version**: 2.0.0  
-**Status**: Production Ready  
+**Status**: Open Source Release Candidate  
 
 ---
 
