feat(cli): add monitor/migrate commands and update roadmap docs

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -122,10 +122,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: CLI — aetheris migrate, monitor, replay (and/or extend existing replay)** — Phase 4
 
-- [ ] Add `aetheris migrate` subcommand (e.g. schema or config migration) and document in docs/cli.md.
-- [ ] Add `aetheris monitor` (e.g. job/worker status, queue depth) and document.
-- [ ] Extend or document `aetheris replay` for 2.0 (replay options, output format).
-- [ ] Update README and docs with new CLI commands.
+- [x] Add `aetheris migrate` subcommand (e.g. schema or config migration) and document in docs/cli.md.
+- [x] Add `aetheris monitor` (e.g. job/worker status, queue depth) and document.
+- [x] Extend or document `aetheris replay` for 2.0 (replay options, output format).
+- [x] Update README and docs with new CLI commands.
 
 **Task: CI/CD pipeline 2.0 (multi-env deployment)** — Phase 4
 
@@ -218,10 +218,10 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 3 | Execution Forensics & Proof Chain | Expose RAG/Tool provenance in API and trace | Todo |
 | 3 | Execution Forensics & Proof Chain | Forensics UI (proof chain, provenance) | Todo |
 | 3 | Execution Forensics & Proof Chain | Tests for proof chain consistency | Todo |
-| 4 | CLI migrate, monitor, replay | Add aetheris migrate and document | Todo |
-| 4 | CLI migrate, monitor, replay | Add aetheris monitor and document | Todo |
-| 4 | CLI migrate, monitor, replay | Extend/document aetheris replay for 2.0 | Todo |
-| 4 | CLI migrate, monitor, replay | Update README and docs | Todo |
+| 4 | CLI migrate, monitor, replay | Add aetheris migrate and document | Done |
+| 4 | CLI migrate, monitor, replay | Add aetheris monitor and document | Done |
+| 4 | CLI migrate, monitor, replay | Extend/document aetheris replay for 2.0 | Done |
+| 4 | CLI migrate, monitor, replay | Update README and docs | Done |
 | 4 | CI/CD pipeline 2.0 | Add or update CI workflow for 2.0 | Todo |
 | 4 | CI/CD pipeline 2.0 | Document multi-env deployment | Todo |
 | 4 | CI/CD pipeline 2.0 | Docker/K8s targets for 2.0 services | Todo |
