chore(devops): add 2.0 make targets and update roadmap progress

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -136,9 +136,9 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Makefile/scripts for 2.0 services** — Phase 4
 
-- [ ] Update Makefile with 2.0 targets (e.g. run-api, run-worker, run-all, test-integration).
+- [x] Update Makefile with 2.0 targets (e.g. run-api, run-worker, run-all, test-integration).
 - [ ] Add or update scripts for local 2.0 stack (e.g. Postgres + API + Worker).
-- [ ] Document one-command run and required env in README or get-started.md.
+- [x] Document one-command run and required env in README or get-started.md.
 
 ---
 
@@ -226,9 +226,9 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 4 | CI/CD pipeline 2.0 | Document multi-env deployment | Todo |
 | 4 | CI/CD pipeline 2.0 | Docker/K8s targets for 2.0 services | Todo |
 | 4 | CI/CD pipeline 2.0 | Release checklist or script for 2.0 | Todo |
-| 4 | Makefile/scripts for 2.0 services | Update Makefile with 2.0 targets | Todo |
+| 4 | Makefile/scripts for 2.0 services | Update Makefile with 2.0 targets | Done |
 | 4 | Makefile/scripts for 2.0 services | Scripts for local 2.0 stack | Todo |
-| 4 | Makefile/scripts for 2.0 services | Document one-command run | Todo |
+| 4 | Makefile/scripts for 2.0 services | Document one-command run | Done |
 | 5 | Getting Started 2.0 | Human-in-the-loop example | Todo |
 | 5 | Getting Started 2.0 | API orchestration scenario | Todo |
 | 5 | Getting Started 2.0 | Auditable agent scenario | Todo |
