feat(devops): complete 2.0 CI/CD pipeline, release checks, and multi-env docs

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -129,10 +129,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: CI/CD pipeline 2.0 (multi-env deployment)** — Phase 4
 
-- [ ] Add or update CI workflow for 2.0 (e.g. .github/workflows): build, test, optional integration tests.
-- [ ] Document multi-environment deployment (staging, prod) in docs/deployment.md or devops.md.
-- [ ] Add optional Docker or K8s targets for 2.0 services (API, Worker) if not already present.
-- [ ] Add release checklist or script for 2.0 tag.
+- [x] Add or update CI workflow for 2.0 (e.g. .github/workflows): build, test, optional integration tests.
+- [x] Document multi-environment deployment (staging, prod) in docs/deployment.md or devops.md.
+- [x] Add optional Docker or K8s targets for 2.0 services (API, Worker) if not already present.
+- [x] Add release checklist or script for 2.0 tag.
 
 **Task: Makefile/scripts for 2.0 services** — Phase 4
 
@@ -222,10 +222,10 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 4 | CLI migrate, monitor, replay | Add aetheris monitor and document | Done |
 | 4 | CLI migrate, monitor, replay | Extend/document aetheris replay for 2.0 | Done |
 | 4 | CLI migrate, monitor, replay | Update README and docs | Done |
-| 4 | CI/CD pipeline 2.0 | Add or update CI workflow for 2.0 | Todo |
-| 4 | CI/CD pipeline 2.0 | Document multi-env deployment | Todo |
-| 4 | CI/CD pipeline 2.0 | Docker/K8s targets for 2.0 services | Todo |
-| 4 | CI/CD pipeline 2.0 | Release checklist or script for 2.0 | Todo |
+| 4 | CI/CD pipeline 2.0 | Add or update CI workflow for 2.0 | Done |
+| 4 | CI/CD pipeline 2.0 | Document multi-env deployment | Done |
+| 4 | CI/CD pipeline 2.0 | Docker/K8s targets for 2.0 services | Done |
+| 4 | CI/CD pipeline 2.0 | Release checklist or script for 2.0 | Done |
 | 4 | Makefile/scripts for 2.0 services | Update Makefile with 2.0 targets | Done |
 | 4 | Makefile/scripts for 2.0 services | Scripts for local 2.0 stack | Done |
 | 4 | Makefile/scripts for 2.0 services | Document one-command run | Done |
