--- a/docs/2.0-roadmap-detailed.md
+++ b/docs/2.0-roadmap-detailed.md
@@ -83,3 +83,4 @@ flowchart LR
 - **Phase timeline and Gantt**: [docs/2.0-roadmap-timeline.md](2.0-roadmap-timeline.md)
 - **2.0 modules and phases**: [design/aetheris-2.0-overview.md](../design/aetheris-2.0-overview.md)
 - **1.0 release baseline**: [docs/release-checklist-v1.0.md](release-checklist-v1.0.md)
+- **Scenario walkthroughs**: [docs/getting-started-agents.md](getting-started-agents.md)
