--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -146,22 +146,22 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Getting Started 2.0 (human-in-loop, API orchestration, auditable agent cases)** — Phase 5
 
-- [ ] Consolidate or add human-in-the-loop example (refund approval) in getting-started-agents.md.
-- [ ] Add API orchestration scenario (multi-API, long-running) with tools and timeout.
-- [ ] Add auditable agent scenario (evidence chain, RAG provenance) with trace/replay steps.
-- [ ] Link all three from README “When to Use Aetheris” and from 2.0-roadmap-detailed.
+- [x] Consolidate or add human-in-the-loop example (refund approval) in getting-started-agents.md.
+- [x] Add API orchestration scenario (multi-API, long-running) with tools and timeout.
+- [x] Add auditable agent scenario (evidence chain, RAG provenance) with trace/replay steps.
+- [x] Link all three from README “When to Use Aetheris” and from 2.0-roadmap-detailed.
 
 **Task: Adapter migration guide** — Phase 5
 
-- [ ] Update docs/adapters/custom-agent.md with “Before / After” and link to E2E scenario.
-- [ ] Complete docs/adapters/langgraph.md with concrete migration steps and code pointers.
-- [ ] Add short “Adapter comparison” or index (Custom vs LangGraph vs future) in docs/adapters/ or README.
+- [x] Update docs/adapters/custom-agent.md with “Before / After” and link to E2E scenario.
+- [x] Complete docs/adapters/langgraph.md with concrete migration steps and code pointers.
+- [x] Add short “Adapter comparison” or index (Custom vs LangGraph vs future) in docs/adapters/ or README.
 
 **Task: Step Contract & best practices** — Phase 5
 
-- [ ] Add “Best practices” section to design/step-contract.md (or new doc): do’s and don’ts, examples.
-- [ ] Document use of runtime.Clock(ctx) and runtime.RandIntn(ctx, n) and StepValidator in step-contract.
-- [ ] Add troubleshooting: “Replay non-deterministic” and “Duplicate side effect” with common causes and fixes.
+- [x] Add “Best practices” section to design/step-contract.md (or new doc): do’s and don’ts, examples.
+- [x] Document use of runtime.Clock(ctx) and runtime.RandIntn(ctx, n) and StepValidator in step-contract.
+- [x] Add troubleshooting: “Replay non-deterministic” and “Duplicate side effect” with common causes and fixes.
 
 ---
 
@@ -229,16 +229,16 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 4 | Makefile/scripts for 2.0 services | Update Makefile with 2.0 targets | Done |
 | 4 | Makefile/scripts for 2.0 services | Scripts for local 2.0 stack | Done |
 | 4 | Makefile/scripts for 2.0 services | Document one-command run | Done |
-| 5 | Getting Started 2.0 | Human-in-the-loop example | Todo |
-| 5 | Getting Started 2.0 | API orchestration scenario | Todo |
-| 5 | Getting Started 2.0 | Auditable agent scenario | Todo |
-| 5 | Getting Started 2.0 | Link from README and roadmap | Todo |
-| 5 | Adapter migration guide | Update custom-agent.md and E2E link | Todo |
-| 5 | Adapter migration guide | Complete langgraph.md migration steps | Todo |
-| 5 | Adapter migration guide | Adapter comparison or index | Todo |
-| 5 | Step Contract & best practices | Best practices section in step-contract.md | Todo |
-| 5 | Step Contract & best practices | Document Clock/RandIntn and StepValidator | Todo |
-| 5 | Step Contract & best practices | Troubleshooting (replay, duplicate side effect) | Todo |
+| 5 | Getting Started 2.0 | Human-in-the-loop example | Done |
+| 5 | Getting Started 2.0 | API orchestration scenario | Done |
+| 5 | Getting Started 2.0 | Auditable agent scenario | Done |
+| 5 | Getting Started 2.0 | Link from README and roadmap | Done |
+| 5 | Adapter migration guide | Update custom-agent.md and E2E link | Done |
+| 5 | Adapter migration guide | Complete langgraph.md migration steps | Done |
+| 5 | Adapter migration guide | Adapter comparison or index | Done |
+| 5 | Step Contract & best practices | Best practices section in step-contract.md | Done |
+| 5 | Step Contract & best practices | Document Clock/RandIntn and StepValidator | Done |
+| 5 | Step Contract & best practices | Troubleshooting (replay, duplicate side effect) | Done |
 
 ---
 
