test(runtime): add timeout and retry policy coverage; update phase2 runbook

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -42,10 +42,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: At-most-once tool extension (Ledger for async/external APIs, retry/timeout policy)** — Phase 2
 
-- [ ] Design Ledger extension for async and external API calls (design/effect-system.md or new doc).
-- [ ] Implement retry policy and timeout in tool execution path (executor, node adapter).
-- [ ] Document and test at-most-once semantics for async tools (ledger + effect store).
-- [ ] Add optional idempotency key propagation to external clients (docs/examples).
+- [x] Design Ledger extension for async and external API calls (design/effect-system.md or new doc).
+- [x] Implement retry policy and timeout in tool execution path (executor, node adapter).
+- [x] Document and test at-most-once semantics for async tools (ledger + effect store).
+- [x] Add optional idempotency key propagation to external clients (docs/examples).
 
 **Task: Workflow nodes modularization (built-in wait/approval/condition, custom node registry)** — Phase 2
 
@@ -98,23 +98,23 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 **Task: Signal loss and worker crash scenarios (tests and docs)** — Phase 2
 
 - [ ] Add tests for signal delivery (at-least-once, idempotent unblock) and document in runtime-contract.
-- [ ] Add or extend tests for worker crash before/after tool commit and reclaim (beyond four fatal tests).
-- [ ] Document signal loss and crash scenarios in docs/runtime-guarantees.md.
+- [x] Add or extend tests for worker crash before/after tool commit and reclaim (beyond four fatal tests).
+- [x] Document signal loss and crash scenarios in docs/runtime-guarantees.md.
 - [ ] Optional: add chaos or fault-injection test for signal and crash.
 
 **Task: Step timeout and failure policy** — Phase 2
 
-- [ ] Document current step_timeout behavior and failure policy (design or runtime-guarantees).
-- [ ] Implement or clarify retry vs permanent-failure policy after timeout (Runner/ClassifyError).
-- [ ] Add tests for step timeout and for retry/backoff behavior.
-- [ ] Expose timeout and retry config in config files and document.
+- [x] Document current step_timeout behavior and failure policy (design or runtime-guarantees).
+- [x] Implement or clarify retry vs permanent-failure policy after timeout (Runner/ClassifyError).
+- [x] Add tests for step timeout and for retry/backoff behavior.
+- [x] Expose timeout and retry config in config files and document.
 
 **Task: Distributed run consistency tests** — Phase 2
 
-- [ ] Add tests that run multiple workers against the same job store and assert single execution per step.
-- [ ] Add tests for reclaim and resume after worker crash (Postgres or in-memory with simulated crash).
-- [ ] Add load or stress test: many jobs, multiple workers, assert no duplicate tool commits and consistent events.
-- [ ] Document how to run distributed tests and expected guarantees.
+- [x] Add tests that run multiple workers against the same job store and assert single execution per step.
+- [x] Add tests for reclaim and resume after worker crash (Postgres or in-memory with simulated crash).
+- [x] Add load or stress test: many jobs, multiple workers, assert no duplicate tool commits and consistent events.
+- [x] Document how to run distributed tests and expected guarantees.
 
 ---
 
@@ -181,26 +181,26 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 1 | Step Contract 2.0 | Implement default validator (time/rand/http check) | Done |
 | 1 | Step Contract 2.0 | Async event handling contract and helpers | Done |
 | 1 | Step Contract 2.0 | Tests for validator and contract compliance | Done |
-| 2 | At-most-once tool extension | Design Ledger extension for async/external APIs | Todo |
-| 2 | At-most-once tool extension | Retry policy and timeout in tool path | Todo |
-| 2 | At-most-once tool extension | Document and test at-most-once for async tools | Todo |
-| 2 | At-most-once tool extension | Idempotency key propagation docs/examples | Todo |
+| 2 | At-most-once tool extension | Design Ledger extension for async/external APIs | Done |
+| 2 | At-most-once tool extension | Retry policy and timeout in tool path | Done |
+| 2 | At-most-once tool extension | Document and test at-most-once for async tools | Done |
+| 2 | At-most-once tool extension | Idempotency key propagation docs/examples | Done |
 | 2 | Workflow nodes modularization | Define built-in node types (wait, approval, condition) | Todo |
 | 2 | Workflow nodes modularization | Custom node registry and discovery | Todo |
 | 2 | Workflow nodes modularization | Implement built-in wait/approval node(s) | Todo |
 | 2 | Workflow nodes modularization | Document custom node registration | Todo |
 | 2 | Signal loss and worker crash scenarios | Tests for signal delivery and idempotent unblock | Todo |
-| 2 | Signal loss and worker crash scenarios | Tests for worker crash and reclaim | Todo |
-| 2 | Signal loss and worker crash scenarios | Document in runtime-guarantees.md | Todo |
+| 2 | Signal loss and worker crash scenarios | Tests for worker crash and reclaim | Done |
+| 2 | Signal loss and worker crash scenarios | Document in runtime-guarantees.md | Done |
 | 2 | Signal loss and worker crash scenarios | Optional chaos/fault-injection test | Todo |
-| 2 | Step timeout and failure policy | Document step_timeout and failure policy | Todo |
-| 2 | Step timeout and failure policy | Retry vs permanent-failure after timeout | Todo |
-| 2 | Step timeout and failure policy | Tests for timeout and retry | Todo |
-| 2 | Step timeout and failure policy | Config and docs for timeout/retry | Todo |
-| 2 | Distributed run consistency tests | Multi-worker same-job tests | Todo |
-| 2 | Distributed run consistency tests | Reclaim and resume after crash tests | Todo |
-| 2 | Distributed run consistency tests | Load/stress test (no duplicate commits) | Todo |
-| 2 | Distributed run consistency tests | Document distributed test run and guarantees | Todo |
+| 2 | Step timeout and failure policy | Document step_timeout and failure policy | Done |
+| 2 | Step timeout and failure policy | Retry vs permanent-failure after timeout | Done |
+| 2 | Step timeout and failure policy | Tests for timeout and retry | Done |
+| 2 | Step timeout and failure policy | Config and docs for timeout/retry | Done |
+| 2 | Distributed run consistency tests | Multi-worker same-job tests | Done |
+| 2 | Distributed run consistency tests | Reclaim and resume after crash tests | Done |
+| 2 | Distributed run consistency tests | Load/stress test (no duplicate commits) | Done |
+| 2 | Distributed run consistency tests | Document distributed test run and guarantees | Done |
 | 3 | LangGraph Adapter | Align with latest LangGraph API | Todo |
 | 3 | LangGraph Adapter | Wrap run as Aetheris step(s) with checkpoint/replay | Todo |
 | 3 | LangGraph Adapter | Error handling and recovery | Todo |
