test(signal): cover idempotent unblock and update phase2 tracker

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -97,7 +97,7 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Signal loss and worker crash scenarios (tests and docs)** — Phase 2
 
-- [ ] Add tests for signal delivery (at-least-once, idempotent unblock) and document in runtime-contract.
+- [x] Add tests for signal delivery (at-least-once, idempotent unblock) and document in runtime-contract.
 - [x] Add or extend tests for worker crash before/after tool commit and reclaim (beyond four fatal tests).
 - [x] Document signal loss and crash scenarios in docs/runtime-guarantees.md.
 - [ ] Optional: add chaos or fault-injection test for signal and crash.
@@ -189,7 +189,7 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 2 | Workflow nodes modularization | Custom node registry and discovery | Todo |
 | 2 | Workflow nodes modularization | Implement built-in wait/approval node(s) | Todo |
 | 2 | Workflow nodes modularization | Document custom node registration | Todo |
-| 2 | Signal loss and worker crash scenarios | Tests for signal delivery and idempotent unblock | Todo |
+| 2 | Signal loss and worker crash scenarios | Tests for signal delivery and idempotent unblock | Done |
 | 2 | Signal loss and worker crash scenarios | Tests for worker crash and reclaim | Done |
 | 2 | Signal loss and worker crash scenarios | Document in runtime-guarantees.md | Done |
 | 2 | Signal loss and worker crash scenarios | Optional chaos/fault-injection test | Todo |
