feat(runtime): finish phase2 workflow-node modularization and signal chaos handling

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -49,10 +49,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Workflow nodes modularization (built-in wait/approval/condition, custom node registry)** — Phase 2
 
-- [ ] Define built-in node types: wait, approval, condition (design or planner types).
-- [ ] Implement custom node registry and discovery (internal/agent/planner or runtime/eino).
-- [ ] Add at least one built-in wait/approval node implementation and wire to Signal.
-- [ ] Document how to register custom nodes and use built-ins in getting-started or adapter docs.
+- [x] Define built-in node types: wait, approval, condition (design or planner types).
+- [x] Implement custom node registry and discovery (internal/agent/planner or runtime/eino).
+- [x] Add at least one built-in wait/approval node implementation and wire to Signal.
+- [x] Document how to register custom nodes and use built-ins in getting-started or adapter docs.
 
 ---
 
@@ -100,7 +100,7 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 - [x] Add tests for signal delivery (at-least-once, idempotent unblock) and document in runtime-contract.
 - [x] Add or extend tests for worker crash before/after tool commit and reclaim (beyond four fatal tests).
 - [x] Document signal loss and crash scenarios in docs/runtime-guarantees.md.
-- [ ] Optional: add chaos or fault-injection test for signal and crash.
+- [x] Optional: add chaos or fault-injection test for signal and crash.
 
 **Task: Step timeout and failure policy** — Phase 2
 
@@ -185,14 +185,14 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 2 | At-most-once tool extension | Retry policy and timeout in tool path | Done |
 | 2 | At-most-once tool extension | Document and test at-most-once for async tools | Done |
 | 2 | At-most-once tool extension | Idempotency key propagation docs/examples | Done |
-| 2 | Workflow nodes modularization | Define built-in node types (wait, approval, condition) | Todo |
-| 2 | Workflow nodes modularization | Custom node registry and discovery | Todo |
-| 2 | Workflow nodes modularization | Implement built-in wait/approval node(s) | Todo |
-| 2 | Workflow nodes modularization | Document custom node registration | Todo |
+| 2 | Workflow nodes modularization | Define built-in node types (wait, approval, condition) | Done |
+| 2 | Workflow nodes modularization | Custom node registry and discovery | Done |
+| 2 | Workflow nodes modularization | Implement built-in wait/approval node(s) | Done |
+| 2 | Workflow nodes modularization | Document custom node registration | Done |
 | 2 | Signal loss and worker crash scenarios | Tests for signal delivery and idempotent unblock | Done |
 | 2 | Signal loss and worker crash scenarios | Tests for worker crash and reclaim | Done |
 | 2 | Signal loss and worker crash scenarios | Document in runtime-guarantees.md | Done |
-| 2 | Signal loss and worker crash scenarios | Optional chaos/fault-injection test | Todo |
+| 2 | Signal loss and worker crash scenarios | Optional chaos/fault-injection test | Done |
 | 2 | Step timeout and failure policy | Document step_timeout and failure policy | Done |
 | 2 | Step timeout and failure policy | Retry vs permanent-failure after timeout | Done |
 | 2 | Step timeout and failure policy | Tests for timeout and retry | Done |
