docs(roadmap): mark custom-agent and forensics phase3 items as done

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -68,10 +68,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Custom Agent Adapter enhancement (Imperative → TaskGraph, CLI/SDK)** — Phase 3
 
-- [ ] Extend task compatibility: support more imperative patterns in conversion (docs/adapters/custom-agent.md).
-- [ ] Add or document CLI helpers for generating TaskGraph from existing code (e.g. scaffold).
-- [ ] Provide SDK helpers or examples for Imperative → TaskGraph conversion (pkg/ or examples/).
-- [ ] Add one end-to-end example (e.g. refund or approval) using the enhanced adapter.
+- [x] Extend task compatibility: support more imperative patterns in conversion (docs/adapters/custom-agent.md).
+- [x] Add or document CLI helpers for generating TaskGraph from existing code (e.g. scaffold).
+- [x] Provide SDK helpers or examples for Imperative → TaskGraph conversion (pkg/ or examples/).
+- [x] Add one end-to-end example (e.g. refund or approval) using the enhanced adapter.
 
 ---
 
@@ -86,10 +86,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Execution Forensics & Proof Chain (cross-worker/DAG audit, RAG/Tool provenance UI)** — Phase 3
 
-- [ ] Design cross-worker and cross-DAG audit data model (design/execution-forensics.md).
-- [ ] Expose RAG doc IDs and Tool provenance in trace/events and API.
-- [ ] Add Forensics UI section: proof chain, provenance graph, or evidence list (Trace page or new page).
-- [ ] Add tests or scripts that assert proof chain consistency for a sample job.
+- [x] Design cross-worker and cross-DAG audit data model (design/execution-forensics.md).
+- [x] Expose RAG doc IDs and Tool provenance in trace/events and API.
+- [x] Add Forensics UI section: proof chain, provenance graph, or evidence list (Trace page or new page).
+- [x] Add tests or scripts that assert proof chain consistency for a sample job.
 
 ---
 
@@ -206,18 +206,18 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 3 | LangGraph Adapter | Error handling and recovery | Todo |
 | 3 | LangGraph Adapter | Update langgraph.md and minimal example | Todo |
 | 3 | LangGraph Adapter | Integration test for replay/signal | Todo |
-| 3 | Custom Agent Adapter enhancement | Extend Imperative → TaskGraph compatibility | Todo |
-| 3 | Custom Agent Adapter enhancement | CLI helpers for TaskGraph generation | Todo |
-| 3 | Custom Agent Adapter enhancement | SDK helpers or examples | Todo |
-| 3 | Custom Agent Adapter enhancement | End-to-end example | Todo |
+| 3 | Custom Agent Adapter enhancement | Extend Imperative → TaskGraph compatibility | Done |
+| 3 | Custom Agent Adapter enhancement | CLI helpers for TaskGraph generation | Done |
+| 3 | Custom Agent Adapter enhancement | SDK helpers or examples | Done |
+| 3 | Custom Agent Adapter enhancement | End-to-end example | Done |
 | 3 | Trace UI 2.0 | Multi-job/agent aggregation view | Todo |
 | 3 | Trace UI 2.0 | Step-level replay control in UI | Todo |
 | 3 | Trace UI 2.0 | Diff view for state before/after step | Todo |
 | 3 | Trace UI 2.0 | Document Trace UI 2.0 | Todo |
-| 3 | Execution Forensics & Proof Chain | Design cross-worker/DAG audit model | Todo |
-| 3 | Execution Forensics & Proof Chain | Expose RAG/Tool provenance in API and trace | Todo |
-| 3 | Execution Forensics & Proof Chain | Forensics UI (proof chain, provenance) | Todo |
-| 3 | Execution Forensics & Proof Chain | Tests for proof chain consistency | Todo |
+| 3 | Execution Forensics & Proof Chain | Design cross-worker/DAG audit model | Done |
+| 3 | Execution Forensics & Proof Chain | Expose RAG/Tool provenance in API and trace | Done |
+| 3 | Execution Forensics & Proof Chain | Forensics UI (proof chain, provenance) | Done |
+| 3 | Execution Forensics & Proof Chain | Tests for proof chain consistency | Done |
 | 4 | CLI migrate, monitor, replay | Add aetheris migrate and document | Done |
 | 4 | CLI migrate, monitor, replay | Add aetheris monitor and document | Done |
 | 4 | CLI migrate, monitor, replay | Extend/document aetheris replay for 2.0 | Done |
