feat(trace+adapter): complete roadmap 2.0 remaining langgraph and trace ui tasks

--- a/docs/2.0-task-breakdown.md
+++ b/docs/2.0-task-breakdown.md
@@ -60,11 +60,11 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: LangGraph Adapter (latest API, error handling and recovery)** — Phase 3
 
-- [ ] Align adapter with latest LangGraph API (invoke, stream, state).
-- [ ] Wrap LangGraph run as Aetheris step(s) with checkpoint and replay in mind.
-- [ ] Add error handling and recovery (map LangGraph errors to StepResultType, retry/signal).
-- [ ] Update docs/adapters/langgraph.md with migration steps and a minimal runnable example.
-- [ ] Add integration test: run a small LangGraph graph via Aetheris and assert replay/signal behavior.
+- [x] Align adapter with latest LangGraph API (invoke, stream, state).
+- [x] Wrap LangGraph run as Aetheris step(s) with checkpoint and replay in mind.
+- [x] Add error handling and recovery (map LangGraph errors to StepResultType, retry/signal).
+- [x] Update docs/adapters/langgraph.md with migration steps and a minimal runnable example.
+- [x] Add integration test: run a small LangGraph graph via Aetheris and assert replay/signal behavior.
 
 **Task: Custom Agent Adapter enhancement (Imperative → TaskGraph, CLI/SDK)** — Phase 3
 
@@ -79,10 +79,10 @@ This document is the **detailed task breakdown and progress tracker** for the 2.
 
 **Task: Trace UI 2.0 (multi-job/agent view, step replay/diff)** — Phase 3
 
-- [ ] Add multi-job or multi-agent aggregation view (API + UI: list jobs/agents, filter).
-- [ ] Implement step-level replay control in Trace UI (replay to step N, show state at step).
-- [ ] Add diff view for state before/after a step or between two steps (extend existing state-diff).
-- [ ] Document Trace UI 2.0 in docs/tracing.md or observability.md.
+- [x] Add multi-job or multi-agent aggregation view (API + UI: list jobs/agents, filter).
+- [x] Implement step-level replay control in Trace UI (replay to step N, show state at step).
+- [x] Add diff view for state before/after a step or between two steps (extend existing state-diff).
+- [x] Document Trace UI 2.0 in docs/tracing.md or observability.md.
 
 **Task: Execution Forensics & Proof Chain (cross-worker/DAG audit, RAG/Tool provenance UI)** — Phase 3
 
@@ -201,19 +201,19 @@ Update the Status column as work proceeds (Todo → In progress → Done).
 | 2 | Distributed run consistency tests | Reclaim and resume after crash tests | Done |
 | 2 | Distributed run consistency tests | Load/stress test (no duplicate commits) | Done |
 | 2 | Distributed run consistency tests | Document distributed test run and guarantees | Done |
-| 3 | LangGraph Adapter | Align with latest LangGraph API | Todo |
-| 3 | LangGraph Adapter | Wrap run as Aetheris step(s) with checkpoint/replay | Todo |
-| 3 | LangGraph Adapter | Error handling and recovery | Todo |
-| 3 | LangGraph Adapter | Update langgraph.md and minimal example | Todo |
-| 3 | LangGraph Adapter | Integration test for replay/signal | Todo |
+| 3 | LangGraph Adapter | Align with latest LangGraph API | Done |
+| 3 | LangGraph Adapter | Wrap run as Aetheris step(s) with checkpoint/replay | Done |
+| 3 | LangGraph Adapter | Error handling and recovery | Done |
+| 3 | LangGraph Adapter | Update langgraph.md and minimal example | Done |
+| 3 | LangGraph Adapter | Integration test for replay/signal | Done |
 | 3 | Custom Agent Adapter enhancement | Extend Imperative → TaskGraph compatibility | Done |
 | 3 | Custom Agent Adapter enhancement | CLI helpers for TaskGraph generation | Done |
 | 3 | Custom Agent Adapter enhancement | SDK helpers or examples | Done |
 | 3 | Custom Agent Adapter enhancement | End-to-end example | Done |
-| 3 | Trace UI 2.0 | Multi-job/agent aggregation view | Todo |
-| 3 | Trace UI 2.0 | Step-level replay control in UI | Todo |
-| 3 | Trace UI 2.0 | Diff view for state before/after step | Todo |
-| 3 | Trace UI 2.0 | Document Trace UI 2.0 | Todo |
+| 3 | Trace UI 2.0 | Multi-job/agent aggregation view | Done |
+| 3 | Trace UI 2.0 | Step-level replay control in UI | Done |
+| 3 | Trace UI 2.0 | Diff view for state before/after step | Done |
+| 3 | Trace UI 2.0 | Document Trace UI 2.0 | Done |
 | 3 | Execution Forensics & Proof Chain | Design cross-worker/DAG audit model | Done |
 | 3 | Execution Forensics & Proof Chain | Expose RAG/Tool provenance in API and trace | Done |
 | 3 | Execution Forensics & Proof Chain | Forensics UI (proof chain, provenance) | Done |
