docs: establish single source of truth for release status

--- a/docs/2.0-roadmap.md
+++ b/docs/2.0-roadmap.md
@@ -1,5 +1,7 @@
 # Aetheris 2.0 升级指引与路线图
 
+> 状态口径说明：当前发布状态与能力成熟度以 [docs/STATUS.md](STATUS.md) 为准；本文档主要用于路线与历史规划参考。
+
 本文档基于当前代码库现状，汇总 2.0 相关模块的完成度、推荐升级指引、优先级与 2.0 发布判定标准。不修改现有 design 文档正文，仅在此引用并归纳。
 
 ---
